xm-nginx-istio/envoy_filter/auth_envoy_filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ext-authz-grpc
  namespace: test-istio-universal
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.http_connection_manager
            subFilter:
              name: envoy.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.ext_authz
        typed_config:
          '@type': type.googleapis.com/envoy.config.filter.http.ext_authz.v2.ExtAuthz
          grpc_service:
            envoy_grpc:
              cluster_name: grpc-ext-auth-cluster
  - applyTo: CLUSTER
    match:
      context: SIDECAR_INBOUND
    patch:
      operation: ADD
      value:
        connect_timeout: 0.25s
        http2_protocol_options: {}
        load_assignment:
          cluster_name: grpc-als-cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 172.20.108.165
                    port_value: 8080
        name: grpc-ext-auth-cluster
        type: STRICT_DNS
